[package]
name = "tuple_join"
authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/tuple_join"
description = """
A crate for joining tuples at the type level.
"""
keywords = ["tuple", "no_std"]
version = "0.1.0"
edition = "2021"
